Added some styling for better visualization

--- a/tic-tac-toe/src/board.css
+++ b/tic-tac-toe/src/board.css
@@ -9,7 +9,13 @@
   background-color: #ddd;
 }
 
-.dimensaoPadrao {
-  width: 300px;
-  height: 300px;
+.dimensaoPadrao,
+.dimensaoPadrao td,
+.dimensaoPadrao tr {
+  width: 100px;
+  height: 100px;
+}
+
+.centralizado {
+  margin: auto;
 }
