Were added: scoreboard, reset button and function, screenshot button (no functionality yet) and some styling

--- a/tic-tac-toe/src/board.css
+++ b/tic-tac-toe/src/board.css
@@ -12,4 +12,38 @@
 
 .centralizado {
   margin: auto;
+  text-align: center;
+}
+
+.fontePlacar {
+  font-family: Cambria, Cochin, Georgia, Times, "Times New Roman", serif;
+  font-size: 50px;
+  font-weight: bolder;
+}
+
+.botaoEsquerdo {
+  margin-left: 18px;
+  margin-top: 10px;
+}
+
+.botaoDireito {
+  margin-right: 18px;
+  margin-top: 10px;
+}
+
+.btn-primary {
+  color: white;
+}
+
+.botaoDesativado {
+  pointer-events: none;
+}
+
+.meiaDimensaoPadrao {
+  width: 90px;
+  height: 45px;
+}
+
+.botaoCentral {
+  margin-top: 10px;
 }
